# worldgen

./: Cargo.toml
src/: dual_graph.rs  lib.rs  peak_automata.rs  peak_island_height.rs  rbf_interpolate.rs  simple_wind.rs
