[package]
name = "worldgen"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde-1"]
serde-1 = ["serde"]

[dependencies]
voronoi = { path = "../../rust_voronoi" }
rbf_interp = { path = "../../rbf_interp" }
spade = "1.8"
petgraph = "0.4"
image = "0.22"
imageproc = "0.19"
itertools = "0.8"
nalgebra = "0.18"
rand = "0.7.0"
conv = "0.3"
num = "0.2"
failure = "0.1"
rayon = "1"
serde = { version = "1.0", features = ["derive"], optional = true }
smallvec = "0.6"

[dev-dependencies]
rand_xorshift = "0.2"
